# python-app-template

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml  preferences.md  pyproject.toml  todos.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: batch.md  epic.md  initiative.md
.github/workflows/: lint.yml  migrations.yml  test.yml
calculator/: __init__.py  calculator.py  example.py
docker-setup/base/: Dockerfile
docker-setup/claude-dev/: entrypoint.sh
generator/: __init__.py  config.py  copier.py  django_setup.py  docker_setup.py  git_setup.py  github_setup.py  project_files.py  setup.py
script/: bootstrap  bootstrap_python  claude  lint  pre-commit  setup_new_app  test
templates/: .env.template  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
templates/.claude/: settings.json
templates/.github/workflows/: README.md  migrations.yml
templates/django_files/: apps.py  logging.py  manage.py  urls.py  wsgi.py
templates/django_files/models/: __init__.py  base_model.py
templates/django_files/settings/: base.py  dev.py  prod.py  test.py
templates/docker-setup/: README.md
templates/docker-setup/claude-dev/: Dockerfile
templates/docker-setup/django-runtime/: Dockerfile
templates/docker-setup/logging/: README.md  loki-config.yml
templates/docker-setup/nginx/: Dockerfile  nginx.conf
templates/script/: add_to_wordlist  bootstrap_python  claude  lint  sort_wordlist  test
templates/script/django/: check_migrate_needed  check_migrations  collectstatic  makemigrations  migrate  runserver
test/: conftest.py  test_config.py  test_copier.py  test_django_setup.py  test_docker_setup.py  test_git_setup.py  test_github_setup.py  test_project_files.py  test_setup.py
workdir/testing-setup/: .gitignore  README.md
workdir/testing-setup/script/: bootstrap_python  update_all_the_things
